objects/Skills_Attributes__c.object
<CustomObject><fields>
        <fullName>Mode_of_Assessing__c</fullName>
        <inlineHelpText>Mode of Assessing Achievement of skill or other attribute</inlineHelpText>
        <label>Mode of Assessing</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Modules_Included__c</fullName>
        <inlineHelpText>Modules in which this will be delivered</inlineHelpText>
        <label>Modules Included</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Programme_Code__c</fullName>
        <formula>Programme_Version__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Version__c</fullName>
        <label>Programme Version</label>
        <referenceTo>Programme_Version__c</referenceTo>
        <relationshipLabel>Skills &amp; Attributes</relationshipLabel>
        <relationshipName>Skills_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Record_No__c</fullName>
        <description>Text and not number to be consistent with Outcome Record No which needs letter prefix; set by workflow</description>
        <inlineHelpText>Leave blank on record creation if automatic numbering is required (set by Workflow)</inlineHelpText>
        <label>No.</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Skill_Attribute__c</fullName>
        <label>Skill or Attribute</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Skill &amp; Attribute</label><nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Skill Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Skills &amp; Attributes</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>